--- a/src/app/index.html
+++ b/src/app/index.html
@@ -24,7 +24,6 @@
                 <table class="table table-hover">
                     <thead>
                         <th>Title</th>
-                        <th>url</th>
                         <th>Description</th>
                         <th>Price</th>
                         <th>type</th>
@@ -32,8 +31,7 @@
 
                     <tbody>
                         <tr ng-repeat="ticket in ticketList">
-                            <td>{{ticket.title}}</td>
-                            <td><a href="{{ticket.auctionUrl}}">link</a></td>
+                            <td><a href="{{ticket.auctionUrl}}">{{ticket.title}}</a></td>
                             <td>{{ticket.description}}</td>
                             <td>{{ticket.price}}</td>
                             <td>{{ticket.type}}</td>
@@ -44,9 +42,10 @@
         </div>
     </div>
 
-
-
-
+    <!--(\\u003C){1}([a-z]+)(\\u003E){1}-->
+    <!--(\\u003C)[a-z]*(\\u003E)-->
+    <!--(\\u003C)((\/?\w+\s+[^>]*)|[a-z]+)(\\u003E)-->
+    <!--(\\u003C)(\/?\w+\s+[^(\\u003E)]*)-->
 
 
 </body>
