--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,19 +18,19 @@
 </head>
 <body>
 
-    <div class="container" ng-controller="TicketList">
+    <div class="container" ng-controller="TickietsController">
         <div class="row">
             <div class="col col-xs-12">
                 <table class="table table-hover">
                     <thead>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Price</th>
-                        <th>type</th>
+                        <th ng-click="reorder('title')">Title</th>
+                        <th ng-click="reorder('description')">Description</th>
+                        <th ng-click="reorder('price')">Price</th>
+                        <th ng-click="reorder('type')">type</th>
                     </thead>
 
                     <tbody>
-                        <tr ng-repeat="ticket in ticketList">
+                        <tr ng-repeat="ticket in tickietsList | orderBy:sortingField:desc">
                             <td><a href="{{ticket.auctionUrl}}">{{ticket.title}}</a></td>
                             <td>{{ticket.description}}</td>
                             <td>{{ticket.price}}</td>
