TIC-41: trim  description & add sort icon

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,6 +6,7 @@
 
     <!--Styles-->
     <link rel="stylesheet" type="text/css" href="style/css/bootstrap.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!--Scripts-->
     <script type="text/javascript" src="js/angular.js"></script>
@@ -23,10 +24,10 @@
             <div class="col col-xs-12">
                 <table class="table table-hover">
                     <thead>
-                        <th ng-click="reorder('title')">Title</th>
-                        <th ng-click="reorder('description')">Description</th>
-                        <th ng-click="reorder('price')">Price</th>
-                        <th ng-click="reorder('type')">type</th>
+                        <th ng-click="reorder('title')"> <i class="fa fa-sort"></i>&nbsp; Title</th>
+                        <th ng-click="reorder('description')"><i class="fa fa-sort"></i>&nbsp;Description</th>
+                        <th ng-click="reorder('price')"><i class="fa fa-sort"></i>&nbsp;Price</th>
+                        <th ng-click="reorder('type')"><i class="fa fa-sort"></i>&nbsp;type</th>
                     </thead>
 
                     <tbody>
