TIC-41: rename tickiet to ticket wrr :/

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,12 +17,12 @@
     <script type="text/javascript" src="app.js"></script>
 
     <!--directives-->
-    <script type="text/javascript" src="_directives/tickietTable.js"></script>
+    <script type="text/javascript" src="_directives/ticketTable.js"></script>
 
 </head>
 <body>
 
-    <tickiet-table></tickiet-table>
+    <ticket-table></ticket-table>
 
 </body>
 </html>
