--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -1,31 +1,59 @@
 <div class="container" ng-controller="TicketsController">
     <div class="row">
         <div class="col col-xs-12">
+            <div class="panel panel-info">
+                <div class="panel panel-heading">
+                    Tickets from 3City :)
+                </div>
 
-            <div ng-show="!isLoaded" class="progress">
-                <div class="progress-bar progress-bar-striped active" role="progressbar"
-                     aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                    Loading data...
+                <div class="panel panel-body" ng-show="!isLoaded">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar"
+                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                            Loading data...
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-body" ng-show="isLoaded">
+                    <table class="table table-hover" ng-show="isLoaded">
+                        <thead>
+                        <th ng-click="reorder('title')" class="col-xs-2"> <i class="fa fa-sort"></i>&nbsp; Music events</th>
+                        <th ng-click="reorder('description')"><i class="fa fa-sort"></i>&nbsp;Description</th>
+                        <th ng-click="reorder('price')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;Price</th>
+                        <!--<th ng-click="reorder('type')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;type</th>-->
+                        </thead>
+
+                        <tbody>
+                        <tr ng-repeat="ticket in ticketsList | filter: {type: 'music' }| orderBy:sortingField:desc">
+                            <td><a href="{{ticket.auctionUrl}}">{{ticket.title}}</a></td>
+                            <td>{{ticket.description}}</td>
+                            <td>{{ticket.price}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="panel panel-body" ng-show="isLoaded">
+                    <table class="table table-hover" ng-show="isLoaded">
+                        <thead>
+                        <th ng-click="reorder('title')" class="col-xs-2"> <i class="fa fa-sort"></i>&nbsp; Sports events</th>
+                        <th ng-click="reorder('description')"><i class="fa fa-sort"></i>&nbsp;Description</th>
+                        <th ng-click="reorder('price')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;Price</th>
+                        <!--<th ng-click="reorder('type')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;type</th>-->
+                        </thead>
+
+                        <tbody>
+                        <tr ng-repeat="ticket in ticketsList | filter: {type: 'sport' }| orderBy:sortingField:desc">
+                            <td><a href="{{ticket.auctionUrl}}">{{ticket.title}}</a></td>
+                            <td>{{ticket.description}}</td>
+                            <td>{{ticket.price}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
                 </div>
             </div>
-
-            <table class="table table-hover" ng-show="isLoaded">
-                <thead>
-                <th ng-click="reorder('title')" class="col-xs-2"> <i class="fa fa-sort"></i>&nbsp; Title</th>
-                <th ng-click="reorder('description')"><i class="fa fa-sort"></i>&nbsp;Description</th>
-                <th ng-click="reorder('price')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;Price</th>
-                <th ng-click="reorder('type')" class="col-xs-1"><i class="fa fa-sort"></i>&nbsp;type</th>
-                </thead>
-
-                <tbody>
-                <tr ng-repeat="ticket in ticketsList | orderBy:sortingField:desc">
-                    <td><a href="{{ticket.auctionUrl}}">{{ticket.title}}</a></td>
-                    <td>{{ticket.description}}</td>
-                    <td>{{ticket.price}}</td>
-                    <td>{{ticket.type}}</td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
