--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -1,5 +1,4 @@
-<div class="container" ng-controller="TicketsController">
-    <h2>Tickets from 3City :)</h2>
+<div class="container">
 
     <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#" ng-click="type='music'">Music</a></li>
@@ -10,7 +9,7 @@
     <div class="tab-content">
         <div class="row">
             <div class="col col-xs-12">
-                <div class="panel panel-info">
+                <div class="panel">
                     <div class="panel-body" ng-show="!isLoaded">
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped active" role="progressbar"
