--- a/src/app/_views/login.html
+++ b/src/app/_views/login.html
@@ -1,15 +1,11 @@
 <div class="login-page">
 	<div class="img-container">
 		<div class="text-center pull-right photo">
-			<img src="images/flat-avatar.png" class="user-avatar img-circle img-responsive" />
-				<h1>VERSATILE<br/ > <span>DASHBOARD</span><br /><small>Free Version</small></h1>
+
 			</div>
 		</div>
 		
 		<div class="form-content">
-			<div class="pro-link">
-				<a href="http://www.strapui.com/">MORE PREMIUM THEME</a>
-			</div>
 			<form role="form" class="bottom-75" ng-submit="submit()">
 			<div class="table-form">
 				<div class="form-groups">
@@ -23,7 +19,7 @@
 						
 				</div>	
 				<div class="button-container">
-					<button type="submit" class="btn btn-default login"><img src="images/arrow.png" alt=""></button>
+					<button type="submit" class="btn btn-default login"><img src="style/images/arrow.png" alt=""></button>
 				</div>
 			</div>
 			<div class="remember">
@@ -32,7 +28,6 @@
 					<span></span>
 				</label>
 				remember me
-				<span class="pass"> forgot password?</span>
 			</div>			
 			</form>
 		</div>			
