--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,26 +11,32 @@
     <link rel="stylesheet" type="text/css" href="style/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="style/css/angular-snap.css" />
     <link rel="stylesheet" type="text/css" href="style/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="style/css/style.css" />
 
 
     <!--Scripts-->
-   <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
+
+
+    <script src="js/angular-ui-router.min.js"></script>
+    <script src="js/angular-animate.js"></script>
+    <script src="js/snap.js"></script>
+    <script src="js/angular-snap.js"></script>
 
 
     <!--App Module-->
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/dashboard.js"></script>
+    <script type="text/javascript" src="_directives/ticketTable.js"></script>
 
 </head>
-<body  ng-app=yapp>
+<body  ng-app='tickets'>
 <div>
     <div ui-view></div>
 </div>
-
-<a href="" type="button" class="btn btn-info btn-sm"><i class="glyphicon glyphicon-refresh"></i> Synchronize</a>
 
 
 
