--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -3,7 +3,7 @@
     <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#" ng-click="type='music'">Music</a></li>
         <li><a data-toggle="tab" href="#" ng-click="type='sport'">Sport</a></li>
-        <li><a data-toggle="tab" href="#" ng-click="type='calender'">Calender</a></li>
+        <li class="navbar-right calendar-btn"><a data-toggle="tab" href="#" ng-click="type='calender'"><i class="glyphicon glyphicon-calendar"> </i> Calendar</a></li>
     </ul>
 
     <div class="tab-content">
