--- a/src/app/_views/dashboard/overview.html
+++ b/src/app/_views/dashboard/overview.html
@@ -14,6 +14,7 @@
 
 		</div>
 	</snap-drawer>
+	<snap-dragger></snap-dragger>
 	<snap-content snap-opt-tap-to-close="false" class="bg-dark">
 
 		<div class="top-menu">
