--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -28,9 +28,11 @@
                             </thead>
 
                             <tbody>
-                            <tr ng-repeat="ticketMusic in ticketsList | filter: {type: 'music'} | orderBy:sortingField:desc">
+                            <tr ng-repeat="ticketMusic in ticketsList | filter: {type: 'music'} | orderBy:sortingField:desc"
+                                ng-click="excerpt = !excerpt;">
                                 <td><a href="{{ticketMusic.auctionUrl}}">{{ticketMusic.title}}</a></td>
-                                <td>{{ticketMusic.description}}</td>
+                                <td ng-if="!excerpt">{{ticketMusic.description | limitTo : 250 : 0}}...</td>
+                                <td ng-if="excerpt">{{ticketMusic.description}}</td>
                                 <td>{{ticketMusic.price}}</td>
                             </tr>
                             </tbody>
@@ -46,9 +48,11 @@
                             </thead>
 
                             <tbody>
-                            <tr ng-repeat="ticketSport in ticketsList | filter: {type: 'sport'} | orderBy:sortingSportField:sportDesc">
+                            <tr ng-repeat="ticketSport in ticketsList | filter: {type: 'sport'} | orderBy:sortingSportField:sportDesc"
+                                ng-click="excerpt = !excerpt; ">
                                 <td><a href="{{ticketSport.auctionUrl}}">{{ticketSport.title}}</a></td>
-                                <td>{{ticketSport.description}}</td>
+                                <td ng-if="!excerpt; ">{{ticketSport.description  | limitTo : 250 : 0}}...</td>
+                                <td ng-if="excerpt">{{ticketMusic.description}}</td>
                                 <td>{{ticketSport.price}}</td>
                             </tr>
                             </tbody>
