TIC-42  Excerptions added

--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -49,10 +49,10 @@
 
                             <tbody>
                             <tr ng-repeat="ticketSport in ticketsList | filter: {type: 'sport'} | orderBy:sortingSportField:sportDesc"
-                                ng-click="excerpt = !excerpt; ">
+                                ng-click="excerptSport = !excerptSport; ">
                                 <td><a href="{{ticketSport.auctionUrl}}">{{ticketSport.title}}</a></td>
-                                <td ng-if="!excerpt; ">{{ticketSport.description  | limitTo : 250 : 0}}...</td>
-                                <td ng-if="excerpt">{{ticketMusic.description}}</td>
+                                <td ng-if="!excerptSport; ">{{ticketSport.description  | limitTo : 250 : 0}}...</td>
+                                <td ng-if="excerptSport">{{ticketMusic.description}}</td>
                                 <td>{{ticketSport.price}}</td>
                             </tr>
                             </tbody>
