--- a/src/app/_views/dashboard/favorites.html
+++ b/src/app/_views/dashboard/favorites.html
@@ -13,6 +13,7 @@
 			</div>
 		</div>
 	</snap-drawer>
+	<snap-dragger></snap-dragger>
 	<snap-content snap-opt-tap-to-close="false" class="bg-dark">
 		<div class="top-menu">
 			<nav class="navbar navbar-default navbar-static-top">
