--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="style/css/angular-snap.css" />
     <link rel="stylesheet" type="text/css" href="style/css/main.css" />
     <link rel="stylesheet" type="text/css" href="style/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style/css/angular-simple-calendar.css" />
 
 
     <!--Scripts-->
@@ -24,6 +25,8 @@
     <script src="js/angular-animate.js"></script>
     <script src="js/snap.js"></script>
     <script src="js/angular-snap.js"></script>
+
+    <script src="js/angular-simple-calendar.js"></script>
 
 
     <!--App Module-->
