--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -36,7 +36,7 @@
                                 <td ng-if="excerpt">{{ticketMusic.description}}</td>
                                 <td>{{ticketMusic.price}}</td>
 
-                                <td ng-if="$state.includes('overview')">
+                                <td ng-show="$state.includes('overview')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Observe" tooltip
                                             ng-click="addToFavorites()">
@@ -44,7 +44,7 @@
                                     </a>
                                 </td>
 
-                                <td ng-if="$state.includes('favorites')">
+                                <td ng-show="$state.includes('favorites')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Stop observing" tooltip
                                             ng-click="removeFromFavorites()">
@@ -72,7 +72,7 @@
                                 <td ng-if="excerptSport">{{ticketSport.description}}</td>
                                 <td>{{ticketSport.price}}</td>
 
-                                <td ng-if="$state.includes('overview')">
+                                <td ng-show="$state.includes('overview')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Observe" tooltip
                                             ng-click="addToFavorites()">
@@ -80,7 +80,7 @@
                                     </a>
                                 </td>
 
-                                <td ng-if="$state.includes('favorites')">
+                                <td ng-show="$state.includes('favorites')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Stop observing" tooltip
                                             ng-click="removeFromFavorites()">
