TIC-42  Excerptions added - fixes

--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -175,4 +175,14 @@
 }
 .events-list ul {
     list-style: none;
+    padding: 0;
+    margin: 12px 5px;
+    font-size: 12px;
+}
+.events-list ul a{
+    color:#ddd;
+}
+.events-list ul a:hover{
+    color:#fff;
+    text-decoration: none;
 }
