--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -39,7 +39,7 @@
                                 <td ng-show="$state.includes('overview')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Observe" tooltip
-                                            ng-click="addToFavorites()">
+                                            ng-click="addToFavorites(ticketMusic)">
                                         <i class="glyphicon glyphicon-heart"></i>
                                     </a>
                                 </td>
@@ -47,7 +47,7 @@
                                 <td ng-show="$state.includes('favorites')">
                                     <a type="button" id="favorites" class="btn btn-default btn-sm"
                                        data-toggle="tooltip" data-placement="bottom" title="Stop observing" tooltip
-                                            ng-click="removeFromFavorites()">
+                                            ng-click="removeFromFavorites(ticketMusic)">
                                         <i class="glyphicon glyphicon-heart"></i>
                                     </a>
                                 </td>
