--- a/src/app/_directives/angular-simple-calendar.html
+++ b/src/app/_directives/angular-simple-calendar.html
@@ -26,6 +26,7 @@
     </div>
 </div>
 <div class="events-list col-sm-3">
+    <h4>EVENTS</h4>
     <ul>
         <li ng-repeat="event in eventsList" ><a href="{{event.eventUrl}}">{{ event.title }}</a></li>
     </ul>
