--- a/src/app/_views/dashboard/overview.html
+++ b/src/app/_views/dashboard/overview.html
@@ -10,6 +10,7 @@
 					porta pretium est, vel aliquet quam auctor in. Nullam
 					massa est, ultrices id luctus id, vulputate quis lacus.</p>
 				<a type="button" class="btn btn-default logout-btn" ui-sref="login"><i class="glyphicon glyphicon-log-out"> </i> Logout</a>
+				<a type="button" class="btn btn-default subscribe-btn" ui-sref="subscribe"><i class="fa fa-envelope"> </i> Subscribe</a>
 			</div>
 
 		</div>
