--- a/src/app/index.html
+++ b/src/app/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/dashboard.js"></script>
+    <script type="text/javascript" src="controllers/subscribe.js"></script>
     <script type="text/javascript" src="_directives/ticketTable.js"></script>
     <script src="_directives/angular-simple-calendar.js"></script>
 
