TIC-40 login by facebook added

--- a/src/app/_views/dashboard/favorites.html
+++ b/src/app/_views/dashboard/favorites.html
@@ -9,7 +9,7 @@
 					blandit aliquam eget, ultrices ut sapien. Suspendisse
 					porta pretium est, vel aliquet quam auctor in. Nullam
 					massa est, ultrices id luctus id, vulputate quis lacus.</p>
-				<a type="button" class="btn btn-default logout-btn" ui-sref="login"><i class="glyphicon glyphicon-log-out"> </i> Logout</a>
+				<a type="button" class="btn btn-default logout-btn" ui-sref="login" ng-click="logout()"><i class="glyphicon glyphicon-log-out"> </i> Logout</a>
 			</div>
 		</div>
 	</snap-drawer>
