--- a/src/app/_views/login.html
+++ b/src/app/_views/login.html
@@ -24,6 +24,9 @@
 			</div>
 
 			</form>
+			<div class="panel-body">
+				<a class="fb-login" href="http://localhost:3000/login/facebook">Login with Facebook</a>
+			</div>
 		</div>			
 	</div>
 </div>
