TIC-44facebook btn added

--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -243,6 +243,10 @@ simple-calendar .events-list a:hover {
     margin-bottom: 0px;
 }
 
-.fb-login {
+.btn-facebook {
+    width:300px;
+    color:white;
+}
+.btn-facebook:hover, .btn-facebook:active, .btn-facebook:focus {
     color:white;
 }
