--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,7 @@
 
     <!--Styles-->
     <link rel="stylesheet" type="text/css" href="style/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="style/css/bootstrap-social.css" />
     <link rel="stylesheet" type="text/css" href="style/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="style/css/angular-snap.css" />
     <link rel="stylesheet" type="text/css" href="style/css/main.css" />
