--- a/src/app/_views/login.html
+++ b/src/app/_views/login.html
@@ -25,7 +25,7 @@
 
 			<!--</form>-->
 			<div class="panel-body">
-				<a class="btn btn-block btn-social btn-facebook" href="http://localhost:3000/login/facebook">
+				<a class="btn btn-lg btn-block btn-social btn-facebook" href="http://localhost:3000/login/facebook">
 					<span class="fa fa-facebook"></span> Sign in with Facebook
 				</a>
 			</div>
